<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CurrencyConverter2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="USD">USD</string>
    <string name="bitcoins">BTC</string>
    <string name="dodgecoins">DGC</string>
    <string name="calc">calculate</string>
    <string name="equals">Equals</string>
    <string name="output">Output</string>
    <string name="toUSD">USD</string>
    <string name="toBitcoins">BTC</string>
    <string name="toDodgecoins">DGC</string>
    <color name="bitcoinColor">#f59117</color>

</resources>
